[dyad] Adding full Spanish translation - wrote 22 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,5 +48,162 @@
   },
   "language_drawer": {
     "title": "Select Language"
+  },
+  "bottom_nav": {
+    "home": "Home",
+    "settings": "Settings",
+    "progress": "Progress",
+    "diets": "Diets",
+    "log_title": "What do you want to log?",
+    "scan_food": "Scan Food",
+    "log_exercise": "Log Exercise"
+  },
+  "home": {
+    "title": "NutriSnap",
+    "kcal_remaining": "{{count}} kcal remaining",
+    "kcal_over": "{{count}} kcal over",
+    "protein": "Protein",
+    "carbs": "Carbs",
+    "fats": "Fats",
+    "health_score": "Health Score",
+    "health_score_excellent": "Excellent",
+    "health_score_good": "Good",
+    "health_score_fair": "Fair",
+    "health_score_improvable": "Improvable",
+    "water_tracker_glasses": "/ {{goal}} glasses",
+    "sugars": "Sugars",
+    "todays_analysis": "Today's Analysis",
+    "no_data": "No data for this day.",
+    "start_logging": "Use the scanner to start logging!"
+  },
+  "progress": {
+    "title": "Your Progress",
+    "subtitle": "Visualize your habits and progress over time.",
+    "weight_unit": "kg",
+    "day_streak": "day streak",
+    "day_streaks": "day streak",
+    "update_weight": "Update my weight",
+    "calorie_intake": "Calorie Intake",
+    "last_7_days": "Last 7 days",
+    "todays_history": "Today's History",
+    "no_scans": "No scans for today."
+  },
+  "diets": {
+    "title": "Diet Plans",
+    "subtitle": "Explore, save, and start the perfect diet for you",
+    "summary": "Your Summary",
+    "saved_diets": "Saved Diets",
+    "diet": "diet",
+    "diets": "diets",
+    "active_diet": "Active Diet",
+    "none": "None",
+    "explore": "Explore",
+    "my_diets": "My Diets",
+    "benefits": "Benefits:",
+    "saved": "Saved",
+    "save_diet": "Save Diet",
+    "unsave": "Unsave",
+    "in_progress": "In Progress",
+    "start": "Start",
+    "sample_menu": "Sample Daily Menu",
+    "breakfast": "Breakfast",
+    "lunch": "Lunch",
+    "snack": "Snack",
+    "dinner": "Dinner",
+    "no_saved_diets": "You haven't saved any diets yet.",
+    "go_explore": "Go to 'Explore' to find one.",
+    "drawer_eat": "What to eat",
+    "drawer_avoid": "What to avoid",
+    "drawer_close": "Close"
+  },
+  "badges": {
+    "title": "My Badges",
+    "subtitle": "Your unlocked achievements and streaks.",
+    "meal_streak": "Meal Streak",
+    "total_badges": "Total Badges",
+    "hydration_streak": "Hydration Streak",
+    "weight_loss": "Weight Loss"
+  },
+  "exercise": {
+    "title": "Log Exercise",
+    "subtitle": "Select the activity you performed to add it to your diary.",
+    "running": "Running",
+    "cycling": "Cycling",
+    "weights": "Weights",
+    "other": "Other"
+  },
+  "running": {
+    "title": "Log Run",
+    "choose_intensity": "1. Choose intensity",
+    "adjust_duration": "2. Adjust duration",
+    "duration": "Duration",
+    "minutes_unit": "min",
+    "save_run": "Save Run ({{calories}} kcal)",
+    "intensity_low": "Low",
+    "intensity_low_desc": "Gentle, steady pace.",
+    "intensity_low_example": "Brisk walk, light jog.",
+    "intensity_medium": "Medium",
+    "intensity_medium_desc": "Increases your heart rate.",
+    "intensity_medium_example": "Running at a comfortable pace.",
+    "intensity_high": "High",
+    "intensity_high_desc": "Maximum effort, intervals.",
+    "intensity_high_example": "Sprints, hill running."
+  },
+  "preferences": {
+    "title": "Preferences",
+    "theme_title": "App Theme",
+    "theme_light": "Light",
+    "theme_dark": "Dark",
+    "theme_system": "System",
+    "notifications_title": "Notifications & Alerts",
+    "badge_celebrations": "Badge Celebrations",
+    "badge_celebrations_desc": "Show an animation when unlocking a new badge.",
+    "daily_reminders": "Daily Reminders",
+    "daily_reminders_desc": "Receive a reminder to log your meals."
+  },
+  "nutritional_goals": {
+    "title": "Nutritional Goals",
+    "daily_goals": "Daily Goals",
+    "subtitle": "Set your daily nutritional targets manually.",
+    "calories": "Calories",
+    "protein": "Protein",
+    "carbs": "Carbs",
+    "fats": "Fats",
+    "sugars": "Sugars",
+    "save": "Save Goals"
+  },
+  "bmi_calculator": {
+    "title": "Your BMI",
+    "incomplete_data": "Complete your weight and height in your profile to calculate your BMI.",
+    "your_weight_is": "Your weight is",
+    "underweight": "Underweight",
+    "healthy": "Healthy",
+    "overweight": "Overweight",
+    "obesity": "Obesity",
+    "tooltip": "The Body Mass Index (BMI) is a measure that relates weight and height."
+  },
+  "manual_food": {
+    "title": "Add Food Manually",
+    "name_label": "Food Name",
+    "name_placeholder": "e.g., Caesar salad with chicken",
+    "desc_label": "Description (optional)",
+    "desc_placeholder": "Add details to help the AI (ingredients, cooking method, etc.)",
+    "portion_label": "Portion Size",
+    "portion_small": "Small",
+    "portion_medium": "Medium",
+    "portion_large": "Large",
+    "submit": "Analyze and Add"
+  },
+  "edit_weight": {
+    "title": "Update Weight",
+    "weight_unit": "kg",
+    "save": "Save"
+  },
+  "toasts": {
+    "coming_soon_title": "Coming Soon",
+    "coming_soon_desc": "This feature will be available soon.",
+    "sign_out_success": "Signed out successfully.",
+    "delete_not_implemented_title": "Function not implemented.",
+    "delete_not_implemented_desc": "Account deletion will be enabled in the future."
   }
 }
