--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -48,5 +48,162 @@
   },
   "language_drawer": {
     "title": "Seleccionar Idioma"
+  },
+  "bottom_nav": {
+    "home": "Inicio",
+    "settings": "Ajustes",
+    "progress": "Progreso",
+    "diets": "Dietas",
+    "log_title": "¿Qué quieres registrar?",
+    "scan_food": "Escanear Comida",
+    "log_exercise": "Registrar Ejercicio"
+  },
+  "home": {
+    "title": "NutriSnap",
+    "kcal_remaining": "{{count}} kcal restantes",
+    "kcal_over": "{{count}} kcal de más",
+    "protein": "Proteína",
+    "carbs": "Carbs",
+    "fats": "Grasas",
+    "health_score": "Puntaje de Salud",
+    "health_score_excellent": "Excelente",
+    "health_score_good": "Bueno",
+    "health_score_fair": "Regular",
+    "health_score_improvable": "Mejorable",
+    "water_tracker_glasses": "/ {{goal}} vasos",
+    "sugars": "Azúcares",
+    "todays_analysis": "Análisis de Hoy",
+    "no_data": "No hay datos para este día.",
+    "start_logging": "¡Usa el escáner para empezar a registrar!"
+  },
+  "progress": {
+    "title": "Tu Progreso",
+    "subtitle": "Visualiza tus hábitos y progreso a lo largo del tiempo.",
+    "weight_unit": "kg",
+    "day_streak": "día de racha",
+    "day_streaks": "días de racha",
+    "update_weight": "Actualizar mi peso",
+    "calorie_intake": "Consumo de Calorías",
+    "last_7_days": "Últimos 7 días",
+    "todays_history": "Historial de Hoy",
+    "no_scans": "No hay escaneos para hoy."
+  },
+  "diets": {
+    "title": "Planes de Dieta",
+    "subtitle": "Explora, guarda y comienza la dieta perfecta para ti",
+    "summary": "Tu Resumen",
+    "saved_diets": "Dietas Guardadas",
+    "diet": "dieta",
+    "diets": "dietas",
+    "active_diet": "Dieta Activa",
+    "none": "Ninguna",
+    "explore": "Explorar",
+    "my_diets": "Mis Dietas",
+    "benefits": "Beneficios:",
+    "saved": "Guardada",
+    "save_diet": "Guardar Dieta",
+    "unsave": "No Guardar",
+    "in_progress": "En Progreso",
+    "start": "Comenzar",
+    "sample_menu": "Menú Diario de Muestra",
+    "breakfast": "Desayuno",
+    "lunch": "Almuerzo",
+    "snack": "Merienda",
+    "dinner": "Cena",
+    "no_saved_diets": "Aún no has guardado ninguna dieta.",
+    "go_explore": "Ve a 'Explorar' para encontrar una.",
+    "drawer_eat": "Qué comer",
+    "drawer_avoid": "Qué evitar",
+    "drawer_close": "Cerrar"
+  },
+  "badges": {
+    "title": "Mis Insignias",
+    "subtitle": "Tus logros y rachas desbloqueadas.",
+    "meal_streak": "Racha de Comidas",
+    "total_badges": "Insignias Totales",
+    "hydration_streak": "Racha de Hidratación",
+    "weight_loss": "Pérdida de Peso"
+  },
+  "exercise": {
+    "title": "Registrar Ejercicio",
+    "subtitle": "Selecciona la actividad que realizaste para añadirla a tu diario.",
+    "running": "Correr",
+    "cycling": "Ciclismo",
+    "weights": "Pesas",
+    "other": "Otro"
+  },
+  "running": {
+    "title": "Registrar Carrera",
+    "choose_intensity": "1. Elige la intensidad",
+    "adjust_duration": "2. Ajusta la duración",
+    "duration": "Duración",
+    "minutes_unit": "min",
+    "save_run": "Guardar Carrera ({{calories}} kcal)",
+    "intensity_low": "Baja",
+    "intensity_low_desc": "Ritmo suave y constante.",
+    "intensity_low_example": "Caminata rápida, trote ligero.",
+    "intensity_medium": "Media",
+    "intensity_medium_desc": "Aumenta tu ritmo cardíaco.",
+    "intensity_medium_example": "Correr a un ritmo cómodo.",
+    "intensity_high": "Alta",
+    "intensity_high_desc": "Esfuerzo máximo, intervalos.",
+    "intensity_high_example": "Sprints, correr en cuestas."
+  },
+  "preferences": {
+    "title": "Preferencias",
+    "theme_title": "Tema de la Aplicación",
+    "theme_light": "Claro",
+    "theme_dark": "Oscuro",
+    "theme_system": "Sistema",
+    "notifications_title": "Notificaciones y Alertas",
+    "badge_celebrations": "Celebraciones de Insignias",
+    "badge_celebrations_desc": "Mostrar una animación al desbloquear una nueva insignia.",
+    "daily_reminders": "Recordatorios Diarios",
+    "daily_reminders_desc": "Recibir un recordatorio para registrar tus comidas."
+  },
+  "nutritional_goals": {
+    "title": "Metas Nutricionales",
+    "daily_goals": "Metas Diarias",
+    "subtitle": "Establece tus objetivos nutricionales diarios manualmente.",
+    "calories": "Calorías",
+    "protein": "Proteína",
+    "carbs": "Carbohidratos",
+    "fats": "Grasas",
+    "sugars": "Azúcares",
+    "save": "Guardar Metas"
+  },
+  "bmi_calculator": {
+    "title": "Tu IMC",
+    "incomplete_data": "Completa tu peso y altura en tu perfil para calcular tu IMC.",
+    "your_weight_is": "Tu peso es",
+    "underweight": "Bajo peso",
+    "healthy": "Saludable",
+    "overweight": "Sobrepeso",
+    "obesity": "Obesidad",
+    "tooltip": "El Índice de Masa Corporal (IMC) es una medida que relaciona el peso y la altura."
+  },
+  "manual_food": {
+    "title": "Añadir Comida Manualmente",
+    "name_label": "Nombre de la Comida",
+    "name_placeholder": "Ej: Ensalada César con pollo",
+    "desc_label": "Descripción (opcional)",
+    "desc_placeholder": "Añade detalles para ayudar a la IA (ingredientes, método de cocción, etc.)",
+    "portion_label": "Tamaño de la Porción",
+    "portion_small": "Pequeña",
+    "portion_medium": "Mediana",
+    "portion_large": "Grande",
+    "submit": "Analizar y Añadir"
+  },
+  "edit_weight": {
+    "title": "Actualizar Peso",
+    "weight_unit": "kg",
+    "save": "Guardar"
+  },
+  "toasts": {
+    "coming_soon_title": "Próximamente",
+    "coming_soon_desc": "Esta función estará disponible pronto.",
+    "sign_out_success": "Sesión cerrada con éxito.",
+    "delete_not_implemented_title": "Función no implementada.",
+    "delete_not_implemented_desc": "La eliminación de la cuenta se habilitará en el futuro."
   }
 }
