[dyad] Redesigning nutritional goals page - wrote 4 file(s), deleted 1 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -176,7 +176,10 @@
     "carbs": "Carbs",
     "fats": "Fats",
     "sugars": "Sugars",
-    "save": "Save Goals"
+    "save": "Save Goals",
+    "ai_suggestions": "AI Suggestions",
+    "save_success": "Nutritional goals updated!",
+    "save_error": "Could not update goals."
   },
   "bmi_calculator": {
     "title": "Your BMI",
