--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -167,7 +167,16 @@
     "save_action": "Save Weights ({{calories}} kcal)",
     "saved_toast_title": "Workout logged!",
     "saved_toast_desc": "You've burned approximately {{calories}} kcal.",
-    "error_toast_title": "Could not log workout."
+    "error_toast_title": "Could not log workout.",
+    "intensity_low": "Low",
+    "intensity_low_desc": "Light weights and comfortable technique.",
+    "intensity_low_example": "Light circuit, resistance bands.",
+    "intensity_medium": "Medium",
+    "intensity_medium_desc": "Moderate effort with challenging sets.",
+    "intensity_medium_example": "Supersets, moderate loads.",
+    "intensity_high": "High",
+    "intensity_high_desc": "Heavy lifting or weights-based HIIT.",
+    "intensity_high_example": "Sets to failure, heavy compounds."
   },
   "write_exercise": {
     "title": "Write Exercise",
